--- a/index.html
+++ b/index.html
@@ -18,46 +18,46 @@
 <body>
     <div class="container">
         <div class="row">
-            <div class="col-sm">
+            <div class="col-sm carta">
                 One of three columns
             </div>
-            <div class="col-sm">
+            <div class="col-sm carta">
                 One of three columns
             </div>
-            <div class="col-sm">
-                One of three columns
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-sm">
-                One of three columns
-            </div>
-            <div class="col-sm">
-                One of three columns
-            </div>
-            <div class="col-sm">
+            <div class="col-sm carta">
                 One of three columns
             </div>
         </div>
         <div class="row">
-            <div class="col-sm">
+            <div class="col-sm carta">
                 One of three columns
             </div>
-            <div class="col-sm">
+            <div class="col-sm carta">
                 One of three columns
             </div>
-            <div class="col-sm">
+            <div class="col-sm carta">
                 One of three columns
             </div>
         </div>
         <div class="row">
-            <div class="col-sm">
+            <div class="col-sm carta">
                 One of three columns
             </div>
-            <div class="col-sm">
+            <div class="col-sm carta">
                 One of three columns
             </div>
-            <div class="col-sm">
+            <div class="col-sm carta">
+                One of three columns
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-sm carta">
+                One of three columns
+            </div>
+            <div class="col-sm carta">
+                One of three columns
+            </div>
+            <div class="col-sm carta">
                 One of three columns
             </div>
         </div>
