correcciones sobre la logica del juego
cambie la manera en que la logica del juego funciona para simplificarlo.

--- a/index.html
+++ b/index.html
@@ -19,46 +19,46 @@
     <div class="container">
         <div class="row">
             <div class="col-sm carta">
-                One of three columns
+                CARTA TAPADA
             </div>
             <div class="col-sm carta">
-                One of three columns
+                CARTA TAPADA
             </div>
             <div class="col-sm carta">
-                One of three columns
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-sm carta">
-                One of three columns
-            </div>
-            <div class="col-sm carta">
-                One of three columns
-            </div>
-            <div class="col-sm carta">
-                One of three columns
+                CARTA TAPADA
             </div>
         </div>
         <div class="row">
             <div class="col-sm carta">
-                One of three columns
+                CARTA TAPADA
             </div>
             <div class="col-sm carta">
-                One of three columns
+                CARTA TAPADA
             </div>
             <div class="col-sm carta">
-                One of three columns
+                CARTA TAPADA
             </div>
         </div>
         <div class="row">
             <div class="col-sm carta">
-                One of three columns
+                CARTA TAPADA
             </div>
             <div class="col-sm carta">
-                One of three columns
+                CARTA TAPADA
             </div>
             <div class="col-sm carta">
-                One of three columns
+                CARTA TAPADA
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-sm carta">
+                CARTA TAPADA
+            </div>
+            <div class="col-sm carta">
+                CARTA TAPADA
+            </div>
+            <div class="col-sm carta">
+                CARTA TAPADA
             </div>
         </div>
     </div>
