juego con funcionamiento

--- a/index.html
+++ b/index.html
@@ -16,52 +16,54 @@
 </head>
 
 <body>
+    <h3 id="contador">Turnos = <span id="turnos"></span></h3>
     <div class="container">
         <div class="row">
-            <div class="col-sm carta">
-                CARTA TAPADA
+            <div class="col">
+                <button type="button" class="btn btn-primary btn-lg carta">CARTA TAPADA</button>
             </div>
-            <div class="col-sm carta">
-                CARTA TAPADA
+            <div class="col">
+                <button type="button" class="btn btn-primary btn-lg carta">CARTA TAPADA</button>
             </div>
-            <div class="col-sm carta">
-                CARTA TAPADA
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-sm carta">
-                CARTA TAPADA
-            </div>
-            <div class="col-sm carta">
-                CARTA TAPADA
-            </div>
-            <div class="col-sm carta">
-                CARTA TAPADA
+            <div class="col">
+                <button type="button" class="btn btn-primary btn-lg carta">CARTA TAPADA</button>
             </div>
         </div>
         <div class="row">
-            <div class="col-sm carta">
-                CARTA TAPADA
+            <div class="col">
+                <button type="button" class="btn btn-primary btn-lg carta">CARTA TAPADA</button>
             </div>
-            <div class="col-sm carta">
-                CARTA TAPADA
+            <div class="col">
+                <button type="button" class="btn btn-primary btn-lg carta">CARTA TAPADA</button>
             </div>
-            <div class="col-sm carta">
-                CARTA TAPADA
+            <div class="col">
+                <button type="button" class="btn btn-primary btn-lg carta">CARTA TAPADA</button>
             </div>
         </div>
         <div class="row">
-            <div class="col-sm carta">
-                CARTA TAPADA
+            <div class="col">
+                <button type="button" class="btn btn-primary btn-lg carta">CARTA TAPADA</button>
             </div>
-            <div class="col-sm carta">
-                CARTA TAPADA
+            <div class="col">
+                <button type="button" class="btn btn-primary btn-lg carta">CARTA TAPADA</button>
             </div>
-            <div class="col-sm carta">
-                CARTA TAPADA
+            <div class="col">
+                <button type="button" class="btn btn-primary btn-lg carta">CARTA TAPADA</button>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col">
+                <button type="button" class="btn btn-primary btn-lg carta">CARTA TAPADA</button>
+            </div>
+            <div class="col">
+                <button type="button" class="btn btn-primary btn-lg carta">CARTA TAPADA</button>
+            </div>
+            <div class="col">
+                <button type="button" class="btn btn-primary btn-lg carta">CARTA TAPADA</button>
             </div>
         </div>
     </div>
+    <h1><span id="final"></span></h1>
     <script src='index.js'></script>
 </body>
 
